tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__if_condition-3.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"if true { echo 10 } else {}\").unwrap()"
---
Statement(
    [
        Statement(
            IfCondition(
                (),
                Boolean(
                    True,
                ),
                (),
                [
                    Echo(
                        (),
                        Number(
                            10.0,
                        ),
                    ),
                ],
                (),
                Some(
                    Else(
                        (),
                        (),
                        [],
                        (),
                    ),
                ),
            ),
        ),
    ],
)
