tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__if_condition-4.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"if true { echo 10 } else { echo 20 }\").unwrap()"
---
Statement(
    [
        Statement(
            IfCondition(
                (),
                Boolean(
                    True,
                ),
                (),
                [
                    Echo(
                        (),
                        Number(
                            10.0,
                        ),
                    ),
                ],
                (),
                Some(
                    Else(
                        (),
                        (),
                        [
                            Echo(
                                (),
                                Number(
                                    20.0,
                                ),
                            ),
                        ],
                        (),
                    ),
                ),
            ),
        ),
    ],
)
