tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__if_condition.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"if true {}\").unwrap()"
---
Statement(
    [
        Statement(
            IfCondition(
                (),
                Boolean(
                    True,
                ),
                (),
                [],
                (),
                None,
            ),
        ),
    ],
)
