tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__import-4.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"import { var1, var2 } \\\"path/to/module\\\"\").unwrap()"
---
Statement(
    [
        Import(
            (),
            ImportSpecific(
                (),
                [
                    Variable(
                        "var1",
                    ),
                    Variable(
                        "var2",
                    ),
                ],
                (),
            ),
            "\"path/to/module\"",
        ),
    ],
)
