tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__import.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"import * \\\"path/to/module\\\"\").unwrap()"
---
Statement(
    [
        Import(
            (),
            ImportAll(
                (),
            ),
            "\"path/to/module\"",
        ),
    ],
)
