tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__lt-2.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"1 + 2 < 2 + 1\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Lt(
                    Add(
                        Number(
                            1.0,
                        ),
                        (),
                        Number(
                            2.0,
                        ),
                    ),
                    (),
                    Add(
                        Number(
                            2.0,
                        ),
                        (),
                        Number(
                            1.0,
                        ),
                    ),
                ),
            ),
        ),
    ],
)
